redactable/tests/ui/not_sensitive_union_rejected.stderr
error: `NotSensitive` cannot be derived for unions
 --> tests/ui/not_sensitive_union_rejected.rs:4:1
  |
4 | union PublicUnion {
  | ^^^^^
