redactable/tests/ui/not_sensitive_union_rejected.rs
use redactable::NotSensitive;

#[derive(NotSensitive)]
union PublicUnion {
    value: u32,
}

fn main() {}
